Removing the version of log4j2 as it should only be set in dependencymanagement section

--- a/nk-design-patterns-examples/pom.xml
+++ b/nk-design-patterns-examples/pom.xml
@@ -21,6 +21,20 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.nikoskatsanos</groupId>
+            <artifactId>nk-jutils-yalf</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
