--- a/nk-kata/pom.xml
+++ b/nk-kata/pom.xml
@@ -17,9 +17,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jackson-version>2.8.5</jackson-version>
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>com.nikoskatsanos</groupId>
             <artifactId>nk-jutils-synthetic</artifactId>
@@ -32,6 +34,13 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
+        </dependency>
+
+        <!-- Redis Client -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- Log4j2 -->
@@ -51,6 +60,23 @@
             <version>4.1.6.Final</version>
         </dependency>
 
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
@@ -59,75 +85,4 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.10</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
-                        <configuration>
-                            <repositoryLayout>flat</repositoryLayout>
-                            <binFileExtensions>
-                                <unix>.sh</unix>
-                            </binFileExtensions>
-                            <programs>
-                                <program>
-                                    <id>WebsocketServer</id>
-                                    <mainClass>com.nikoskatsanos.netty.ws.WebsocketServer</mainClass>
-                                    <platforms>
-                                        <platform>unix</platform>
-                                    </platforms>
-                                    <jvmSettings>
-                                        <extraArguments>
-                                            <extraArgument>-server</extraArgument>
-                                            <extraArgument>-XX:+UseG1GC</extraArgument>
-                                            <extraArgument>-Dlog4j.debug</extraArgument>
-                                            <extraArgument>-Dlog4j.configurationFile=WebSocket-log4j2.xml</extraArgument>
-                                            <extraArgument>-Dlog4j.configuration=log4jNetty.xml</extraArgument>
-                                            <extraArgument>-Xmx256M</extraArgument>
-                                            <extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
-                                            <extraArgument>-Djava.rmi.server.hostname=nikoskatsanos.com</extraArgument>
-                                            <extraArgument>-Dcom.sun.management.jmxremote.rmi.port=10001</extraArgument>
-                                            <extraArgument>-Dcom.sun.management.jmxremote</extraArgument>
-                                            <extraArgument>-Dcom.sun.management.jmxremote.port=10000</extraArgument>
-                                            <extraArgument>-Dcom.sun.management.jmxremote.local.only=false
-                                            </extraArgument>
-                                            <extraArgument>-Dcom.sun.management.jmxremote.authenticate=false
-                                            </extraArgument>
-                                            <extraArgument>-Dcom.sun.management.jmxremote.ssl=false</extraArgument>
-                                        </extraArguments>
-                                    </jvmSettings>
-                                </program>
-                            </programs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/zip.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
