--- a/nk-dummies/pom.xml
+++ b/nk-dummies/pom.xml
@@ -38,7 +38,14 @@
             <artifactId>log4j-core</artifactId>
             <version>2.5</version>
         </dependency>
-        
+
+        <!-- Jython -->
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython-standalone</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
