--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>command-line-parser-example</module>
         <module>nk-design-patterns-examples</module>
+        <module>nk-dummies</module>
     </modules>
     <name>nk-playground</name>
     <description>Playground project for trying out new technologies and creating some examples. Nothing too serious
@@ -48,6 +49,11 @@
 
             <dependency>
                 <groupId>com.nikoskatsanos</groupId>
+                <artifactId>nk-jutils-core</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nikoskatsanos</groupId>
                 <artifactId>nk-jutils-yalf</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
@@ -55,12 +61,12 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
-                <version>2.5</version>
+                <version>2.16</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.5</version>
+                <version>2.16</version>
             </dependency>
 
             <dependency>
